# dolphin-romthumbnailer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RomThumbnailer.kdev4  build.sh  configdata.kcfgc  configdef.kcfg  org.ndsromthumbnailer.metainfo.xml  romthumbnailer.desktop  romthumbnailerconfig.kcfg  romthumbnailerconfig.kcfgc  thumbnailer.json
docs/: README.md
src/: CMakeLists.txt  configui.cpp  configui.h  configui.ui  main.cpp  nds.cpp  nds.h  romthumbnailer.cpp  romthumbnailer.h  settings.ui  thumbnailer.cpp  thumbnailer.h
src/config/: configui.cpp  configui.h  configui.ui
src/romdata/: CMakeLists.txt  nds.cpp  nds.h  romdata.h
tests/: CMakeLists.txt  nds.cpp
